fix pre overflow

--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -132,18 +132,17 @@ ol {
   list-style-position: outside;
   list-style-image: none;
 }
+.preContainer {
+  background: #272822;
+  border-radius: var(--border-radius);
+}
 pre {
-  margin-left: 0;
-  margin-right: 0;
-  margin-top: 0;
-  margin-bottom: var(--space-4);
   font-size: 0.875rem;
   line-height: var(--line-height-normal);
-  background: hsla(0, 0%, 0%, 0.096);
+  background: #272822;
   border-radius: var(--border-radius);
   overflow: auto;
   word-wrap: normal;
-  padding: var(--space-4);
 }
 b,
 strong,
